# mcomp-projects

./: .gitignore  pyproject.toml
it5008_project/: Insert_Sequence.md  README.md  drop_schema.sql  gemini.md  process.py  schema.sql
it5008_project/doc/: README.md  order_items.csv  orders_paid_by_card.csv  payment_card.csv
it5008_project/notebook/: 01-etl.ipynb  01-insert-bk.ipynb  01-insert-schema.ipynb  02-pratik-discover.ipynb  02-relations-insert.ipynb  03-registration_sql.ipynb  bills_inserts.sql  data_draft.sql  menu_inserts.sql  orders.sql  orders_inserts.sql  reg_inserts.sql  registration_inserts.sql  staff_inserts.sql
it5008_project/project3_data/: test.sql
it5008_project/project_1_sub/: data.sql  schema_jordan.sql
it5008_project/project_1_sub/actual/: data.sql  schema.sql
it5008_project/project_1_sub/drafts/: populate_orders_20250902.sql  schema (Javier - 20250902).sql  schema_init.sql  schema_jordan.sql
it5008_project/project_2_sub/actual/: data.sql  diagram.md  populate_orders.sql  schema.sql
it5008_project/project_2_sub/jayden/: data_draft.sql  menu_staff.sql
it5008_project/project_2_sub/leechuan/: combinedv2.sql  modified_order_items_inserts.sql  order_items_inserts.sql  orders_paid_by_card_inserts.sql  payment_card_inserts.sql  registration_inserts.sql  registration_membership_inserts.sql  schemav2.sql
it5008_project/project_3_sub/javier/: ordered_by.sql  prepare.sql
it5008_project/project_3_sub/jayden/: procedure-test.sql  procedure.sql  trigger-test.sql  trigger.sql
it5008_project/project_3_sub/jordan/: Populate tables.sql  (+3 more)
(+7 files in other folders)
