[project]
name = "it5008-project"
version = "0.1.0"
description = "Data processing for IT5008 Project"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "psycopg2-binary>=2.9.0", # PostgreSQL adapter
    "python-dotenv>=1.0.0", # For environment variables
    "sqlalchemy>=2.0.0", # SQL toolkit # IPython kernel for Jupyter
    "ipykernel>=6.0.0",
]
